-
Bug
-
Resolution: Done
-
P2: Important
-
5.9.0 Beta 4
-
None
-
-
1a1cb8f24b0c159305213d0c7f60dfe65f238b18 (qttools/5.9, 2.6.2018, 5.9.1)
Fails with
D:\dev\sdk\Qt59O\5.9\msvc2015_64\bin\libGLESV2.dll does not exist.
This should work again in the 5.9 RC since that ships ANGLE as was before (split into EGL/GLESv2).
For the combined ANGLE/Dynamic GL case, https://codereview.qt-project.org/#/c/193521/ is not sufficient since the ANGLE name is decided based on the hard dependency of QtGui which is not present in Dynamic GL.
- is duplicated by
-
QTBUG-60997 "mingw53_32\bin\libGLESV2.dll does not exist" error
-
- Closed
-
- relates to
-
QTBUG-60956 windeployqt does not deploy plugins
-
- Closed
-
- resulted from
-
QTBUG-60373 [Reg: 5.8 -> 5.9 beta] LIBEGL_NAME variable name changed to LIBGLESV2_NAME
-
- Closed
-
| For Gerrit Dashboard: QTBUG-60962 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 195269,2 | windeployqt: Determine name of ANGLE libraries by existence | 5.9 | qt/qttools | Status: MERGED | +2 | 0 |