windeployqt: Determine name of ANGLE libraries by existence

Previously, the name was determined by checking the dependencies
of QtGui, which are not present in the dynamic GL case. Replace
by a check for the file name.

Task-number: QTBUG-60962
Change-Id: I8778dc0d03808f88ed8f5dc6b3ca4acd22aae3ae
Reviewed-by: Andy Shaw <andy.shaw@qt.io>
Reviewed-by: Oliver Wolff <oliver.wolff@qt.io>